Added custom CSS for title and logo

--- a/it/EuroPython2013/index.html
+++ b/it/EuroPython2013/index.html
@@ -13,6 +13,7 @@
 		<!-- Theme -->
 		<link rel="stylesheet" href="assets/reveal.js/css/reveal.min.css">
 		<link rel="stylesheet" href="assets/reveal.js/css/theme/serif.css" id="theme">
+		<link rel="stylesheet" href="assets/css/custom.css">
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="assets/reveal.js/lib/css/zenburn.css">
@@ -27,6 +28,12 @@
 		<![endif]-->
 	</head>
 	<body>
+		<img id="logo" src="assets/img/europython-logo.png" />
+		<div id="title">
+			<p>Speed up your Django app with Jython and SPDY</p>
+			<hr/>
+			<p class="title-name">Emanuele Palazzetti :: Evonove srl</p>
+		</div>
 		<div class="reveal">
 			<div class="slides">
 				<section data-markdown="django-spdy.md" data-separator="^\n\n\n" data-vertical="^\n\n"></section>
