--- a/it/EuroPython2013/index.html
+++ b/it/EuroPython2013/index.html
@@ -11,16 +11,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<!-- Theme -->
-		<link rel="stylesheet" href="assets/reveal.js/css/reveal.min.css">
-		<link rel="stylesheet" href="assets/reveal.js/css/theme/serif.css" id="theme">
-		<link rel="stylesheet" href="assets/css/custom.css">
+		<link rel="stylesheet" href="/assets/reveal.js/css/reveal.min.css">
+		<link rel="stylesheet" href="/assets/reveal.js/css/theme/serif.css" id="theme">
+		<link rel="stylesheet" href="/assets/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" href="/css/custom.css">
 
 		<!-- For syntax highlighting -->
-		<link rel="stylesheet" href="assets/reveal.js/lib/css/zenburn.css">
+		<link rel="stylesheet" href="/assets/reveal.js/lib/css/zenburn.css">
 
 		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
 		<script>
-			document.write( '<link rel="stylesheet" href="assets/reveal.js/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+			document.write( '<link rel="stylesheet" href="/assets/reveal.js/css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
 		</script>
 
 		<!--[if lt IE 9]>
@@ -28,11 +29,11 @@
 		<![endif]-->
 	</head>
 	<body>
-		<img id="logo" src="assets/img/europython-logo.png" />
+		<img id="logo" src="/img/europython-logo.png" />
 		<div id="title">
 			<p>Speed up your Django app with Jython and SPDY</p>
 			<hr/>
-			<p class="title-name">Emanuele Palazzetti :: Evonove srl</p>
+			<p class="title-name">Emanuele Palazzetti :: evonove.it</p>
 		</div>
 		<div class="reveal">
 			<div class="slides">
@@ -40,8 +41,8 @@
 			</div>
 		</div>
 
-		<script src="assets/reveal.js/lib/js/head.min.js"></script>
-		<script src="assets/reveal.js/js/reveal.min.js"></script>
+		<script src="/assets/reveal.js/lib/js/head.min.js"></script>
+		<script src="/assets/reveal.js/js/reveal.min.js"></script>
 		<script>
 			Reveal.initialize({
 				controls: false,
@@ -52,14 +53,14 @@
 
 				// Optional libraries used to extend on reveal.js
 				dependencies: [
-					{ src: 'assets/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-					{ src: 'assets/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'assets/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-					{ src: 'assets/reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: 'assets/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
-					{ src: 'assets/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
-					// { src: 'assets/reveal.js/plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; } }
-					// { src: 'assets/reveal.js/plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
+					{ src: '/assets/reveal.js/lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: '/assets/reveal.js/plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '/assets/reveal.js/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: '/assets/reveal.js/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: '/assets/reveal.js/plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: '/assets/reveal.js/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+					// { src: '/assets/reveal.js/plugin/search/search.js', async: true, condition: function() { return !!document.body.classList; } }
+					// { src: '/assets/reveal.js/plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
 				]
 			});
 		</script>
