Fixed date of hackathon training workshop

--- a/it/Workshop-Android/index.html
+++ b/it/Workshop-Android/index.html
@@ -35,7 +35,7 @@
 						![Android workshop](/assets/img/android.png)<br>
 						Università degli studi di Perugia<br><br>
 						Speaker: Emanuele Palazzetti<br>
-						<small>- 7 aprile 2013 -</small>
+						<small>- 7 maggio 2013 -</small>
 					</script>
 				</section>
 				<section>
